Releasing 3.0.0-dev_preview1

--- a/src/main/asciidoc/index.adoc
+++ b/src/main/asciidoc/index.adoc
@@ -1,9 +1,8 @@
+= Vert.x reference manual
+:toc: right
+
 = Vert.x API manual
 
-== The Event Bus
+== Flow Control - Streams and Pumps
 
-include::io.vertx.core.eventbus.adoc[]
-
-== Buffers
-
-include::io.vertx.core.buffer.adoc[]
+include::io.vertx.core.streams.adoc[]
