Renamed @Options to @DataObject

--- a/src/main/asciidoc/io.vertx.core.streams.adoc
+++ b/src/main/asciidoc/io.vertx.core.streams.adoc
@@ -27,13 +27,7 @@ to the `NetSocket`, for example:
 
 [source,java]
 ----
-var server = vertx.createNetServer({"port" : 1234, "host" : "localhost"});
-server.connectHandler(function (sock) {
-  sock.handler(function (buffer) {
-    sock.write(buffer);
-  });
-}).listen();
-
+todo
 ----
 
 There's a problem with the above example: If data is read from the socket faster than it can be
@@ -46,15 +40,7 @@ writing to it:
 
 [source,java]
 ----
-var server = vertx.createNetServer({"port" : 1234, "host" : "localhost"});
-server.connectHandler(function (sock) {
-  sock.handler(function (buffer) {
-    if (!sock.writeQueueFull()) {
-      sock.write(buffer);
-    };
-  });
-}).listen();
-
+todo
 ----
 
 This example won't run out of RAM but we'll end up losing data if the write queue gets full. What we
@@ -62,16 +48,7 @@ really want to do is pause the `NetSocket` when the write queue is full. Let's d
 
 [source,java]
 ----
-var server = vertx.createNetServer({"port" : 1234, "host" : "localhost"});
-server.connectHandler(function (sock) {
-  sock.handler(function (buffer) {
-    sock.write(buffer);
-    if (sock.writeQueueFull()) {
-      sock.pause();
-    };
-  });
-}).listen();
-
+todo
 ----
 
 We're almost there, but not quite. The `NetSocket` now gets paused when the file is full, but we also need to unpause
@@ -79,19 +56,7 @@ it when the write queue has processed its backlog:
 
 [source,java]
 ----
-var server = vertx.createNetServer({"port" : 1234, "host" : "localhost"});
-server.connectHandler(function (sock) {
-  sock.handler(function (buffer) {
-    sock.write(buffer);
-    if (sock.writeQueueFull()) {
-      sock.pause();
-      sock.drainHandler(function (done) {
-        sock.resume();
-      });
-    };
-  });
-}).listen();
-
+todo
 ----
 
 And there we have it. The link:jsdoc/writ_stream-WriteStream.html#drainHandler[`drainHandler`] event handler will
@@ -104,12 +69,7 @@ the `WriteStream` and it tell it to start:
 
 [source,java]
 ----
-var Pump = require("vertx-js/pump");
-var server = vertx.createNetServer({"port" : 1234, "host" : "localhost"});
-server.connectHandler(function (sock) {
-  Pump.pump(sock, sock).start();
-}).listen();
-
+todo
 ----
 
 Which does exactly the same thing as the more verbose example.
