--- a/src/main/asciidoc/eventbus.adoc
+++ b/src/main/asciidoc/eventbus.adoc
@@ -1,7 +1,7 @@
 == The Event Bus
 :toc: left
 
-The link:jsdoc/even_bus-EventBus.html[`event bus`] is the *nervous system* of Vert.x.
+The link:jsdoc/event_bus-EventBus.html[`event bus`] is the *nervous system* of Vert.x.
 
 There is a single event bus instance for every Vert.x instance and it is obtained using the method link:jsdoc/vertx-Vertx.html#eventBus[`eventBus`].
 
@@ -88,7 +88,7 @@ _lingua franca_ for Vert.x.
 However you are not forced to use JSON if you don't want to.
 
 The event bus is very flexible and also supports supports sending arbitrary objects over the event bus.
-You do this by defining a link:jsdoc/messag_codec-MessageCodec.html[`codec`] for the objects you want to send.
+You do this by defining a link:jsdoc/message_codec-MessageCodec.html[`codec`] for the objects you want to send.
 
 === The Event Bus API
 
@@ -108,7 +108,7 @@ There is a single instance of the event bus per Vert.x instance.
 
 ==== Registering Handlers
 
-This simplest way to register a handler is using link:jsdoc/even_bus-EventBus.html#consumer[`consumer`].
+This simplest way to register a handler is using link:jsdoc/event_bus-EventBus.html#consumer[`consumer`].
 Here's an example:
 
 [source,java]
@@ -122,11 +122,11 @@ eb.consumer("news.uk.sport", function (message) {
 
 When a message arrives for your handler, your handler will be called, passing in the link:jsdoc/message-Message.html[`message`].
 
-The object returned from call to +consumer()+ is an instance of link:jsdoc/messag_consumer-MessageConsumer.html[`MessageConsumer`]
+The object returned from call to +consumer()+ is an instance of link:jsdoc/message_consumer-MessageConsumer.html[`MessageConsumer`]
 
 This object can subsequently be used to unregister the handler, or use the handler as a stream.
 
-Alternatively you can use link:jsdoc/even_bus-EventBus.html#consumer[`consumer`] to
+Alternatively you can use link:jsdoc/event_bus-EventBus.html#consumer[`consumer`] to
 to return a +MessageConsumer+ with no handler set, and then set the handler on that. For example:
 
 [source,java]
@@ -142,7 +142,7 @@ consumer.handler(function (message) {
 When registering a handler on a clustered event bus, it can take some time for the registration to reach all
 nodes of the cluster.
 
-If you want to be notified when this has completed, you can register a link:jsdoc/messag_consumer-MessageConsumer.html#completionHandler[`completion handler`]
+If you want to be notified when this has completed, you can register a link:jsdoc/message_consumer-MessageConsumer.html#completionHandler[`completion handler`]
 on the +MessageConsumer+ object.
 
 [source,java]
@@ -159,10 +159,10 @@ consumer.completionHandler(function (res, res_err) {
 
 ==== Un-registering Handlers
 
-To unregister a handler, call link:jsdoc/messag_consumer-MessageConsumer.html#unregister[`unregister`].
+To unregister a handler, call link:jsdoc/message_consumer-MessageConsumer.html#unregister[`unregister`].
 
 If you are on a clustered event bus, un-registering can take some time to propagate across the nodes, if you want to
-be notified when this is complete use link:jsdoc/messag_consumer-MessageConsumer.html#unregister[`unregister`].
+be notified when this is complete use link:jsdoc/message_consumer-MessageConsumer.html#unregister[`unregister`].
 
 [source,java]
 ----
@@ -178,7 +178,7 @@ consumer.unregister(function (res, res_err) {
 
 ==== Publishing messages
 
-Publishing a message is simple. Just use link:jsdoc/even_bus-EventBus.html#publish[`publish`] specifying the
+Publishing a message is simple. Just use link:jsdoc/event_bus-EventBus.html#publish[`publish`] specifying the
 address to publish it to.
 
 [source,java]
@@ -194,7 +194,7 @@ That message will then be delivered to all handlers registered against the addre
 Sending a message will result in only one handler registered at the address receiving the message.
 This is the point to point messaging pattern. The handler is chosen in a non-strict round-robin fashion.
 
-You can send a message with link:jsdoc/even_bus-EventBus.html#send[`send`]
+You can send a message with link:jsdoc/event_bus-EventBus.html#send[`send`]
 
 [source,java]
 ----
@@ -205,7 +205,7 @@ eventBus.send("news.uk.sport", "Yay! Someone kicked a ball");
 ==== Setting headers on messages
 
 Messages sent over the event bus can also contain headers. This can be specified by providing a
-link:jsdoc/deliver_options-DeliveryOptions.html[`DeliveryOptions`] when sending or publishing:
+link:jsdoc/delivery_options-DeliveryOptions.html[`DeliveryOptions`] when sending or publishing:
 
 [source,java]
 ----
@@ -262,7 +262,7 @@ consisting of multiple rounds.
 
 ==== Sending with timeouts
 
-When sending a message with a reply handler you can specify a timeout in the link:jsdoc/deliver_options-DeliveryOptions.html[`DeliveryOptions`].
+When sending a message with a reply handler you can specify a timeout in the link:jsdoc/delivery_options-DeliveryOptions.html[`DeliveryOptions`].
 
 If a reply is not received within that time, the reply handler will be called with a failure.
 
@@ -306,7 +306,7 @@ Vertx.clusteredVertx(options, function (res, res_err) {
 
 ----
 
-You should also make sure you have a link:jsdoc/cluste_manager-ClusterManager.html[`ClusterManager`] implementation on your classpath,
+You should also make sure you have a link:jsdoc/cluster_manager-ClusterManager.html[`ClusterManager`] implementation on your classpath,
 for example the default .
 
 ==== Clustering on the command line
