--- a/src/main/asciidoc/dataobject/PemTrustOptions.adoc
+++ b/src/main/asciidoc/dataobject/PemTrustOptions.adoc
@@ -1,8 +1,8 @@
-== PemCaOptions
+== PemTrustOptions
 
 ++++
  Certificate Authority options configuring certificates based on
- <i>Privacy-enhanced Electronic Email</i> (PEM) files. The store is configured with a list of
+ <i>Privacy-enhanced Electronic Email</i> (PEM) files. The options is configured with a list of
  validating certificates.
  <p>
  Validating certificates must contain X.509 certificates wrapped in a PEM block:<p>
@@ -19,7 +19,7 @@
  <p>
  <pre>
  HttpServerOptions options = new HttpServerOptions();
- options.setPemCaOptions(new PemCaOptions().addCertPath("/cert.pem"));
+ options.setPemTrustOptions(new PemTrustOptions().addCertPath("/cert.pem"));
  </pre>
 
  Or directly provided as a buffer:
@@ -28,7 +28,7 @@
  <pre>
  Buffer cert = vertx.fileSystem().readFileSync("/cert.pem");
  HttpServerOptions options = new HttpServerOptions();
- options.setPemCaOptions(new PemCaOptions().addCertValue(cert));
+ options.setPemTrustOptions(new PemTrustOptions().addCertValue(cert));
  </pre>
 ++++
 
